# test

./: .gitignore  Makefile.am  configure.ac  gradle.sh  test.code-workspace  version.m4
lib/genetics/: genetics.c  genetics.h  transl_table.c  transl_table.h
src/: main.c  tests.c  tests.h
