AC_PREREQ(2.60)
AC_CONFIG_MACRO_DIRS([m4])
m4_include([version.m4])
AC_INIT([alex-libs], VERSION_NUMBER)
AM_INIT_AUTOMAKE([-Wall foreign subdir-objects])
AC_CONFIG_HEADERS(config.h)
AC_PREFIX_DEFAULT(/usr/local)

AC_PROG_CC
AM_PROG_AR
AC_PROG_LIBTOOL

AC_CONFIG_FILES([Makefile])

AC_OUTPUT

echo "CFLAGS=$CFLAGS"